# buraq

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  ITools.sln  LICENSE  README.md  build-local.sh  build.Dockerfile  build.sh  buraq.iss  it-tools.iss  manifest.json  qt.conf.in  resources.qrc  response.json  share OneDrive.ps1  styles.qss  temp.ps1  vcpkg.json
.github/workflows/: build-latest.yml  build-release.yml  build.yml  c-cpp.yml  delete-old-releases.yml  manifest.yml  publish-win-ghcr.yml  publish.yml  release.yml  reusable-build.yml  test-build.yml  validate-merge.yml  vcpkg-build-cache.yml  win-vckpg-mingw64-qt-cpp-minimal-image.yml
CSharpManaged/: Buraq.Bridge.cs  Buraq.Bridge.csproj  Buraq.PowerShell.cs  Buraq.Powershell.csproj  CSharpManaged.sln  README  build.sh
ManagedLibrary/: ManagedLibrary.cs  ManagedLibrary.sln  README  build.sh
ManagedLibrary/ManagedLibraryPublish/: ManagedLibrary.deps.json
TestManagedApp/: Program.cs  TestManagedApp.csproj  TestManagedApp.sln
app/: CMakeLists.txt  FileObject.cpp  FileObject.h  IToolsAPI.h  PluginManager.cpp  PluginManager.h  ProcessThread.cpp  app_version.cpp  app_version.h  dark_theme.qss  db_connection.h  light_theme.qss  main.cpp  main_config.xml  qt.conf  resources.qrc  styles.qss  version.json
app/ManagedProcess/: ManagedProcess.h
app/client/: VersionRepository.cpp  VersionRepository.h
app/clients/PSClient/: PSClient.cpp  PSClient.h
app/clients/VersionClient/: VersionRepository.cpp  VersionRepository.h
app/database/: db_conn.cpp  db_conn.h
app/icons/: buraq - 2.xcf  buraq.xcf  buraq_old.xcf
app/res/: ITools.rc  buraq.rc
app/test/: share OneDrive.ps1  temp.ps1
app/ui/: AppUi.cpp  AppUi.h  CodeRunner.cpp  CodeRunner.h  CommonWidget.h  CustomDrawer.cpp  CustomDrawer.h  CustomLabel.cpp  CustomLabel.h  Editor.cpp  Editor.h  EditorActionArea.cpp  EditorActionArea.h  EditorMargin.cpp  EditorMargin.h  FilePathLabel.h  IToolsUi.cpp  IconButton.h  LineNumberArea.h  OutputDisplay.cpp  OutputDisplay.h  ToolBar.cpp  ToolBar.h  ToolBarEventFilter.cpp  ToolBarEventFilter.h  ToolButton.h
app/ui/DraggableWidget/: DraggableWidget.cpp  DraggableWidget.h
app/ui/Filters/ThemeManager/: ThemeManager.cpp  ThemeManager.h
app/ui/Filters/Toolbar/: ToolBarEvent.cpp  ToolBarEvent.h
app/ui/app_ui/: AppUi.cpp  AppUi.h
app/ui/dialog/: Dialog.cpp  Dialog.h  VersionUpdateDialog.cpp  VersionUpdateDialog.h
app/ui/editor/: CodeRunner.cpp  CodeRunner.h  Editor.cpp  Editor.h  LineNumberAreaWidget.cpp  LineNumberAreaWidget.h
app/ui/frameless_window/: FramelessWindow.cpp  FramelessWindow.h
app/ui/output_display/: OutputDisplay.cpp  OutputDisplay.h
app/ui/settings/: SettingsDialog.cpp  SettingsDialog.h  UserSettings.h
app/ui/settings/Dialog/: SettingsDialog.cpp  SettingsDialog.h
app/ui/settings/SettingManager/: SettingsManager.cpp  SettingsManager.h
app/utils/: Config.cpp  Config.h  Minion.cpp  Minion.h  Utils.cpp  Utils.h
app/utils/Frame/: Frame.cpp  Frame.h
backup/: build-release.yml  manifest.yml  release.yml
base_image/win/: Dockerfile
config/: config.xml  main_config.xml
docs/: CNAME  index.html  script.js  style.css
exts/: CMakeLists.txt  README.md
exts/powershell/: CMakeLists.txt  PowershellExt.cpp  PowershellExt.h
exts/updater/: CMakeLists.txt  UpdateWorker.cpp  UpdateWorker.h  Updater.cpp  UpdaterProgressDialog.cpp  UpdaterProgressDialog.h
icons/dark/: index.theme
icons/dark/png/: temp.ps1
include/: BuraqApi.h  IToolsAPI.h  PluginInterface.h  buraq.cpp  buraq.h  buraq_api.cpp  buraq_api.h  error_codes.h  network.cpp  network.h  pch.h  plugin_interface.h  theme_manager.cpp  theme_manager.h  version.h
plugins_src/powershell_plugin/: CMakeLists.txt  Powershell.h  PowershellPlugin.cpp
src/: ProcessThread.h  db_conn.h  main.cpp
src/ui/: CustomDrawer.cpp  CustomDrawer.h  CustomLabel.h  Editor.cpp  Editor.h  EditorMargin.cpp  EditorMargin.h  FilePathLabel.h  IToolsUi.cpp  IToolsUi.h  IconButton.h  LineNumberArea.h  OutputDisplay.cpp  ToolBar.cpp  ToolBar.h  ToolBarEventFilter.cpp  ToolBarEventFilter.h  ToolButton.h  itools_utils.h
src/utils/: Config.cpp  Config.h  Utils.h
